# LaTeX_Worker_Expriment

./: .gitignore  CLAUDE.md  LICENSE  README.md
cloudflare/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
cloudflare/migrations/: 0001_initial.sql
cloudflare/src/: auth.ts  db.ts  index.ts  storage.ts
cloudflare/src/do/: ProjectRoom.ts
cloudflare/test/: api.test.ts  auth.test.ts  db.test.ts  helpers.ts  storage.test.ts
daemon/: Cargo.toml
daemon/install/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
daemon/scripts/: cxx_wrapper
daemon/src/: main.rs
docker/linux/: Dockerfile
docker/windows/: Dockerfile
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
frontend/functions/api/: [[path]].ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/Editor/: CodeEditor.tsx  FileTree.tsx  PdfViewer.tsx  ShareModal.tsx  Toolbar.tsx  index.tsx
frontend/src/components/ProjectList/: index.tsx
frontend/src/hooks/: useAuth.test.ts  useAuth.ts  useCompile.test.ts  useCompile.ts  usePdfReload.test.ts  usePdfReload.ts  useProject.test.ts  useProject.ts
frontend/src/styles/: app.css
frontend/src/types/: index.ts
